--- a/index.html
+++ b/index.html
@@ -123,7 +123,16 @@
                   class="ud-main-btn ud-white-btn"
                   data-toggle="tooltip" data-placement="bottom" title="Python server"
                 >
-                  Demo server</i>
+                  Legend</i>
+                </a>
+                <a
+                  href="https://infinity.lnbits.com"
+                  rel="nofollow noopener"
+
+                  class="ud-main-btn ud-white-btn"
+                  data-toggle="tooltip" data-placement="bottom" title="Go server"
+                >
+                  Infinity</i>
                 </a>
               </div>
             </nav>
@@ -166,10 +175,23 @@
                     class="ud-main-btn ud-white-btn"
                     data-toggle="tooltip" data-placement="bottom" title="Python server"
                   >
-                    Demo Server 
+                    Legend Demo Server 
                   </a>
                 </div>
+                <div class="col">
+                  <a
+                    href="https://infinity.lnbits.com"
+                    rel="nofollow noopener"
+
+                    class="ud-main-btn ud-white-btn"
+                    data-toggle="tooltip" data-placement="bottom" title="Go server"
+                  >
+                  Infinity Demo Server 
+                  </a>
+                </div>
+                
               </div>
+              <center> <p>(Legend is the commonly used and tested version, Infinity is more experimental)</p></center>
             </center>
             </div>
             <div
@@ -310,7 +332,8 @@
               <span>Frameworks</span>
               <h2>Frameworks used in LNbits</h2>
               <p>
-                LNbits uses Quasar & VueJS for its frontend.
+                2 versions of LNbits exist: Python LNbits, and GO LNbits.</br>
+                Both LNbits use Quasar & VueJS for its frontend.
               </p>
             </div>
           </div>
@@ -346,9 +369,9 @@
             >
 
             <div class="ud-testimonial-content">
-              <h3>Backend</h3>
+              <h3>Legend</h3>
               <p>
-                LNbits backend uses FastAPI, a modern, high-performance Python API framework.
+                The more commonly used and tested LNbits, using FastAPI, a modern, high-performance Python API framework.
               </p>
               <br/>
               <a href="https://fastapi.tiangolo.com/" target="_blank">
@@ -360,6 +383,28 @@
           </a>
             </div>
           </div></div>
+          <div class="col-lg-4 col-md-6">
+            <div
+              class="ud-single-testimonial wow fadeInUp"
+              data-wow-delay=".2s"
+            >
+
+            <div class="ud-testimonial-content">
+              <h3>Infinity</h3>
+              <p>
+                A cutting edge, experimental version of LNbits, written in Go a programming language for building efficient software.
+              </p>
+              <br/>
+              <a href="https://fastapi.tiangolo.com/" target="_blank">
+              <img
+              style="height:38px"
+              src="assets/images/frameworks/gologo.png"
+              alt="fastapi"
+            />
+          </a>
+            </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
