Added shop and removed infinity

--- a/index.html
+++ b/index.html
@@ -121,10 +121,19 @@
                   rel="nofollow noopener"
 
                   class="ud-main-btn ud-white-btn"
-                  data-toggle="tooltip" data-placement="bottom" title="Python server"
+                  data-toggle="tooltip" data-placement="bottom" title="Demo server (only for testing)"
                 >
                   Demo server</i>
                 </a>
+                <a
+                href="https://shop.lnbits.com"
+                rel="nofollow noopener"
+
+                class="ud-main-btn ud-white-btn"
+                data-toggle="tooltip" data-placement="bottom" title="Shop"
+              >
+                Shop</i>
+              </a>
               </div>
             </nav>
           </div>
@@ -164,9 +173,19 @@
                     href="https://legend.lnbits.com"
                     rel="nofollow noopener"
                     class="ud-main-btn ud-white-btn"
-                    data-toggle="tooltip" data-placement="bottom" title="Python server"
+                    data-toggle="tooltip" data-placement="bottom" title="Demo server (only for testing)"
                   >
                     Demo Server 
+                  </a>
+                </div>
+                <div class="col">
+                  <a
+                    href="https://shop.lnbits.com"
+                    rel="nofollow noopener"
+                    class="ud-main-btn ud-white-btn"
+                    data-toggle="tooltip" data-placement="bottom" title="Shop"
+                  >
+                    Shop
                   </a>
                 </div>
               </div>
@@ -317,7 +336,7 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-4 col-md-6">
+          <div class="col">
             <div
               class="ud-single-testimonial wow fadeInUp"
               data-wow-delay=".1s"
@@ -339,7 +358,7 @@
             </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6">
+          <div class="col">
             <div
               class="ud-single-testimonial wow fadeInUp"
               data-wow-delay=".15s"
