--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                   class="ud-main-btn ud-white-btn"
                   data-toggle="tooltip" data-placement="bottom" title="Demo server (only for testing)"
                 >
-                  Demo server</i>
+                  Demo</i>
                 </a>
                 <a
                 href="https://shop.lnbits.com"
@@ -175,7 +175,7 @@
                     class="ud-main-btn ud-white-btn"
                     data-toggle="tooltip" data-placement="bottom" title="Demo server (only for testing)"
                   >
-                    Demo Server 
+                    Demo 
                   </a>
                 </div>
                 <div class="col">
