tweaked for mobile

--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
                 building easy. 
               </p>
               <center>
-              <div style="max-width: 700px"class="row ud-hero-buttons">
-                <div class="col">
+              <div style="max-width: 700px;"class="row ud-hero-buttons">
+                <div class="col" style="padding-left: 0px;">
                   <a
                     href="https://github.com/lnbits/lnbits#lnbits"
                     rel="nofollow noopener"
@@ -178,7 +178,7 @@
                     Demo 
                   </a>
                 </div>
-                <div class="col">
+                <div class="col" style="padding-right: 0px;">
                   <a
                     href="https://shop.lnbits.com"
                     rel="nofollow noopener"
