--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
                     href="https://github.com/lnbits/lnbits#lnbits"
                     rel="nofollow noopener"
                     class="ud-main-btn ud-white-btn"
+                    style="margin: 0px"
                   >
                     Github
                   </a>
@@ -173,6 +174,7 @@
                     href="https://legend.lnbits.com"
                     rel="nofollow noopener"
                     class="ud-main-btn ud-white-btn"
+                    style="margin: 0px"
                     data-toggle="tooltip" data-placement="bottom" title="Demo server (only for testing)"
                   >
                     Demo 
@@ -183,6 +185,7 @@
                     href="https://shop.lnbits.com"
                     rel="nofollow noopener"
                     class="ud-main-btn ud-white-btn"
+                    style="margin: 0px"
                     data-toggle="tooltip" data-placement="bottom" title="Shop"
                   >
                     Shop
