--- a/index.html
+++ b/index.html
@@ -198,7 +198,9 @@
               class="ud-hero-brands-wrapper wow fadeInUp"
               data-wow-delay=".3s"
             >
-            <a class="ud-menu-scroll" href="#frameworks"> <img src="assets/images/hero/brand.png" alt="brand" /></a>
+            <a class="ud-menu-scroll" 
+              href="#frameworks"> <img src="assets/images/hero/brand.png" alt="brand" 
+              data-toggle="tooltip" data-placement="bottom" title="Frameworks/languages used by LNbits"></a>
             </div>
             <div class="ud-hero-image wow fadeInUp" data-wow-delay=".25s">
               <img src="assets/images/hero/lnbits-hero.png" alt="hero-image" />
