added voltage logo and links to 'LN Bits runs on list'

--- a/index.html
+++ b/index.html
@@ -595,6 +595,18 @@
                       />
                     </a>
                   </li>
+                  <li>
+                    <a
+                      href="https://voltage.cloud/  "
+
+                      target="_blank"
+                    >
+                      <img
+                        src="assets/images/footer/brands/voltage.png"
+                        alt="tailwindtemplates"
+                      />
+                    </a>
+                  </li>
                 </ul>
               </div>
             </div>
