Updated funding sources and awesome lnbits link (maintained in wiki now)
🧹

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             
               <h2>Features</h2>
               <p>
-                LNbits can run on top of any lightning-network funding source, currently there is support for LND, c-lightning, Spark, LNpay, OpenNode, lntxbot, with more being added regularly.
+                LNbits can run on top of any lightning-network funding source, currently there is support for LND, C-lightning, Spark, IBEX hub, LNpay, OpenNode, Cliche Wallet, Lightning tipbot and more being added regularly.
               </p>
             </div>
           </div>
@@ -402,7 +402,7 @@
 
             </div>
            <center><h3>Checkout the <a href="https://github.com/lnbits/lnbits">GitHub</a> docs, 
-            <a href="https://www.youtube.com/channel/UCGXU2Ae5x5K-5aKdmKqoLYg">YouTube</a> and <a href="https://github.com/cryptoteun/awesome-lnbits">Awesome LNbits</a>.</h3></center> 
+            <a href="https://www.youtube.com/channel/UCGXU2Ae5x5K-5aKdmKqoLYg">YouTube</a> and <a href="https://github.com/lnbits/lnbits/wiki/Powered-by-LNbits">Awesome LNbits</a>.</h3></center> 
            
             </div>
           </div>
